<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sunilm.weatherapp.DetailedActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_anchorGravity="bottom">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                />

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Detailedactivity_currentlocation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left|center"
                android:text="@string/currentLocation" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="271dp"
            android:orientation="vertical"
            android:weightSum="1">

            <ImageView
                android:id="@+id/Detailed_image"
                android:layout_width="match_parent"
                android:layout_height="98dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.10"
                app:srcCompat="@android:drawable/screen_background_light" />

            <TextView
                android:id="@+id/Da_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/Da_Cloud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/max_tem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="30dp"
                android:text="@string/Max_temperaturetext" />

            <TextView
                android:id="@+id/min_temperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Min_temperaturetext" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Feels_like"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Feels_like" />

            <TextView
                android:id="@+id/Humidity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Humidity" />

            <TextView
                android:id="@+id/Dewpoint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Dewpoint" />

            <TextView
                android:id="@+id/pressure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Pressure" />

            <TextView
                android:id="@+id/Da_clouds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/clouds" />

            <TextView
                android:id="@+id/Da_winds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/winds" />
        </LinearLayout>
    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
